<resources>
    <string name="app_name">Presence</string>

    //Login Page
    <string name="username">email</string>
    <string name="password">password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forgot">forgot your password?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Main page
    <string name="signinKiosk">Sign-In Kiosk</string>
    <string name="manage">Manage classes</string>

    <string name="welcome">Welcome, </string>

    //Class Manager
    <string name="className">Title</string>
    <string name="classDetail">Details</string>
    <string name="Students">Students in class</string>
    <string name="submit">Save class</string>
    <string name="delete">Remove class</string>

    //Member Manager
    <string name="memberName">Name</string>
    <string name="memberPin">Pin</string>
    <string name="parentConfirm">Is a parent?</string>
    <string name="submitMember">Save Student</string>
    <string name="deleteMember">Remove Student</string>


    <string name="week_prompt">Meeting Days</string>
    //Days of Week
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="everyday">Everyday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="save">Save</string>
</resources>
