<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="itp341.truong.steven.presence.ManageClassActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/className"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/newClassNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/classDetail"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/newClassDetailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_weight="4"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_prompt"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/sunday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                />
            <CheckBox
                android:id="@+id/monday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                />
            <CheckBox
                android:id="@+id/tuesday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                />
            <CheckBox
                android:id="@+id/wednesday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/thursday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                />
            <CheckBox
                android:id="@+id/friday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                />
            <CheckBox
                android:id="@+id/saturday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"/>

            <CheckBox
                android:id="@+id/all_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/everyday"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Students"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginTop="4dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/member_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layoutManager="LinearLayoutManager"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        tools:listitem="@layout/fragment_class_list_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/submitNewClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
        <Button
            android:id="@+id/removeClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>


</LinearLayout>
