<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.truong.steven.presence.OptionsFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/currentUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/currentUserPassword"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/saveOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>


</LinearLayout>
